# riichi-rs

./: .gitignore  Cargo.toml  README.md  release.toml
riichi/: Cargo.toml  README.lib.md  README.md  _build.rs  build.rs
riichi-analysis/: Cargo.toml
riichi-analysis/src/: lib.rs
riichi-decomp/: Cargo.toml  README.md  build.rs
riichi-decomp-table/: Cargo.toml  README.md
riichi-decomp-table/src/: c_table.rs  lib.rs  utils.rs  w_table.rs
riichi-decomp/src/: decomposer.rs  irregular.rs  lib.rs  main.rs  regular.rs
riichi-elements/: Cargo.toml  README.lib.md  README.md
riichi-elements/src/: hand_group.rs  lib.rs  meld.rs  player.rs  tile.rs  tile_set.rs  typedefs.rs  utils.rs  wall.rs
riichi-elements/src/meld/: ankan.rs  chii.rs  daiminkan.rs  kakan.rs  packed.rs  pon.rs  utils.rs
riichi-elements/src/tile_set/: tile_mask_34.rs  tile_set_34.rs  tile_set_37.rs
riichi/data/t6-samples/: 99.json  abort-nagashi-mangan.json  chankan.json  four-kans.json  four-riichi.json  four-wind.json  kazoe-yakuman.json  pao.json  wall-exhaust.json  yakuman-2.json  yakuman-four-kans-2.json
riichi/data/t6-samples-excluded/: pao-2.json
riichi/data/t6-samples/notable-features/: furiten.json  rinshan.json  ron-2-no-honba.json  ron-2.json  ron-3.json
riichi/data/t6-samples/random-games/: 2022013100gm-00a9-0000-af91b2de.json  2022080600gm-00a9-0000-06406b7f.json  2022080600gm-00a9-0000-b8ad3aee.json  2022080601gm-00a9-0000-e3595545.json  2022080818gm-00a9-0000-6c4ec7d1.json  2022081017gm-00e1-0000-2df24853.json  2022081121gm-00a9-0000-372fcc17.json  2022081318gm-00a9-0000-6c91213c.json
riichi/scripts/: conflict1.rs  pack_test.rs  t6dl.sh
riichi/src/: analysis.rs  common.rs  engine.rs  interop.rs  lib.rs  model.rs  rules.rs  yaku.rs
riichi/src/analysis/: decomp.rs  decomposer.rs  irregular.rs  regular.rs
riichi/src/common/: hand_group.rs  meld.rs  player.rs  tile.rs  tile_set.rs  typedefs.rs  utils.rs  wall.rs
riichi/src/common/meld/: ankan.rs  chii.rs  daiminkan.rs  kakan.rs  packed.rs  pon.rs  utils.rs
riichi/src/engine/: action.rs  agari.rs  cache.rs  errors.rs  reaction.rs  scoring.rs  step.rs  utils.rs  wait_calc.rs
riichi/src/engine/agari/: hand_common.rs  regular_wait_common.rs  tests.rs  yaku_detector.rs  yaku_detectors.rs
riichi/src/interop/: tenhou_log.rs
riichi/src/interop/tenhou_log/: end_info.rs  entry.rs  meld.rs  recovery.rs  round.rs  scoring.rs  strings.rs  test_utils.rs  tile.rs
riichi/src/interop/tenhou_log_json/: end_info.rs  entry.rs  meld.rs  recovery.rs  round.rs  scoring.rs  strings.rs  tile.rs
riichi/src/model/: action.rs  action_result.rs  actions.rs  agari.rs  boundary.rs  discard.rs  history.rs  reaction.rs  state.rs  yaku.rs  yaku_utils.rs
riichi/src/yaku/: builder.rs  conflict.rs  known.rs  standard.rs
riichi/tests/: tenhou_log.rs
scripts/: pack_test.rs  pack_test_2.rs  ux_test.rs
src/: common.rs  engine.rs  lib.rs  model.rs
src/analysis/: decomp.rs
src/common/: hand_group.rs  meld.rs  tile.rs  tile_set.rs  typedefs.rs  utils.rs  wall.rs
src/common/meld/: ankan.rs  chii.rs  daiminkan.rs  kakan.rs  packed.rs  pon.rs
tenhou-db/: Cargo.toml  db_def.sql  release.toml
tenhou-db/src/: db.rs  download.rs  extract.rs  lib.rs  parse.rs  urls.rs
tenhou-log-json/: Cargo.toml
tenhou-shuffle/: Cargo.toml  README.md
tenhou-shuffle/src/: lib.rs  mt19937_nostd.rs
tenhou-shuffle/test_data/: 2016022509gm-0009-0000-b327da61.json  2016022509gm-0009-0000-b327da61.rnd_u32  2016022509gm-0009-0000-b327da61.seed_str  2016022509gm-0009-0000-b327da61.seed_u32  2016022509gm-0009-0000-b327da61.src_u32  2016022509gm-0009-0000-b327da61.wall136  2016022509gm-0009-0000-b327da61.xml
