[workspace]

members = [
    "riichi",
    "riichi-decomp",
    "riichi-decomp-table",
    "riichi-elements",
    "tenhou-db",
    "tenhou-log-json",
    "tenhou-shuffle",
]


[workspace.dependencies]
itertools = "0.10"
nanovec = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
phf_codegen = { version = "0.11" }
