[workspace]

members = [
    "riichi",
    "riichi-decomp",
    "riichi-decomp-table",
    "riichi-elements",
    "tenhou-db",
    "tenhou-shuffle",
]


[workspace.dependencies]
itertools = "0.10"
nanovec = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4"
serde_json = "1.0"
serde_tuple = "0.5.0"
serde_with = "2.0"
strum = { version = "0.24", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
phf_codegen = { version = "0.11" }
