[package]
name = "riichi-decomp-table"
version = "0.1.0"
edition = "2021"

authors = ["summivox <summivox@gmail.com>"]
description = "Lookup Table Generation for `riichi-decomp`"
repository = "https://github.com/summivox/riichi-rs"
keywords = ["riichi", "mahjong", "game", "tenhou", "majsoul"]
categories = ["algorithms", "game-development"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
itertools = "0.10"
rustc-hash = "1"

# workspace shared
nanovec.workspace = true
phf.workspace = true
phf_codegen.workspace = true
strum.workspace = true


[dev-dependencies]
once_cell = "1"
