[package]
name = "riichi-decomp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
once_cell = "1.15"
sortnet = "0.1.0"

# workspace shared
nanovec.workspace = true
phf.workspace = true
serde = { workspace = true, optional = true }

# internal
riichi-elements = { path = "../riichi-elements", features = ["std"], version = "0.1.0" }
riichi-decomp-table = { path = "../riichi-decomp-table", version = "0.1.0" }


[dev-dependencies]
assert-json-diff = "2.0"
pretty_assertions = "1.2"
pretty_assertions_sorted = "1.2"
serde_json.workspace = true


[build-dependencies]
phf_codegen.workspace = true

# internal
riichi-decomp-table = { path = "../riichi-decomp-table", version = "0.1.0" }


[features]
default = ["serde", "static-lut"]

serde = ["dep:serde", "riichi-elements/serde"]
static-lut = []
