[package]
name = "riichi-decomp"
version = "0.1.0"
edition = "2021"

authors = ["summivox <summivox@gmail.com>"]
description = "Japanese Riichi Mahjong Waiting Hand Decomposition"
repository = "https://github.com/summivox/riichi-rs"
keywords = ["riichi", "mahjong", "game", "tenhou", "majsoul"]
categories = ["algorithms", "game-development"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
once_cell = "1.15"
sortnet = "0.1.0"

# CLI
#clap = { version = "4.0", features = ["derive"], optional = true }

# workspace shared
nanovec.workspace = true
phf.workspace = true
serde = { workspace = true, optional = true }

# internal
riichi-elements = { path = "../riichi-elements", features = ["std"], version = "0.1.0" }
riichi-decomp-table = { path = "../riichi-decomp-table", version = "0.1.0" }


[dev-dependencies]
assert-json-diff = "2.0"
pretty_assertions = "1.2"
pretty_assertions_sorted = "1.2"
serde_json.workspace = true


[build-dependencies]
phf_codegen.workspace = true

# internal
riichi-decomp-table = { path = "../riichi-decomp-table", version = "0.1.0" }


[features]
default = ["serde", "static-lut"]

#cli = ["dep:clap"]
serde = ["dep:serde", "riichi-elements/serde"]
static-lut = []

# TODO(summivox): https://github.com/rust-lang/cargo/issues/4663, https://github.com/rust-lang/rfcs/pull/3020
# For now, we will stick to a simple test binary.
#[[bin]]
#name = "main"
#path = "src/main.rs"
#required-features = ["cli"]
