[package]
name = "riichi-elements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.1.7"
derive_more = "0.99.17"
itertools = { version = "0.10", default-features = false }
strum = { version = "0.24", default-features = false, features = ["derive"] }

# workspace shared
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }


[dev-dependencies]
assert-json-diff = "2.0"
itertools = "0.10"
serde_json = "1.0"


[features]
default = ["serde"]

serde = ["dep:serde"]
std = ["itertools/use_std", "serde/std", "strum/std"]
