[package]
name = "riichi-elements"
version = "0.1.0"
edition = "2021"

authors = ["summivox <summivox@gmail.com>"]
description = "Building blocks of Japanese Riichi Mahjong"
repository = "https://github.com/summivox/riichi-rs"
keywords = ["riichi", "mahjong", "game", "tenhou", "majsoul"]
categories = ["no-std", "algorithms", "game-development"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.1.7"
derive_more = "0.99.17"
strum = { version = "0.24", default-features = false, features = ["derive"] }

# workspace shared
itertools = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }


[dev-dependencies]
assert-json-diff = "2.0"
itertools.workspace = true
serde_json.workspace = true


[features]
default = ["serde"]

serde = ["dep:serde"]
std = ["itertools/use_std", "serde/std", "strum/std"]
