[package]
name = "riichi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
bitfield-struct = "0.1.7"
derive_more = "0.99"
itertools = "0.10.3"
num-traits = "0.2"
num_enum = "0.5.7"
once_cell = "1.13"
phf = "0.11"  # should agree with phf_codegen
thiserror = "1.0"
ux = "0.1.5"

riichi-decomp-table = { path = "../riichi-decomp-table" }


[dev-dependencies]
assert2 = "0.3"
bencher = "0.1.5"
pretty_assertions = "1.2"
pretty_assertions_sorted = "1.2"


[build-dependencies]
phf_codegen = "0.11"  # should agree with phf

riichi-decomp-table = { path = "../riichi-decomp-table" }
