[package]
name = "riichi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
bitfield-struct = "0.1.7"
derive_more = "0.99"
glob = { version = "0.3", optional = true }
itertools = "0.10.3"
log = "0.4"
num_enum = "0.5.7"
once_cell = "1.13"
phf = { version = "0.11", features = ["macros"] }  # should agree with phf_codegen
rand = { version = "0.8", optional = true }
regex = { version = "1.6.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_tuple = { version = "0.5.0", optional = true }
serde_with = { version = "2.0", optional = true }
thiserror = "1.0"
ux = "0.1.5"

riichi-decomp-table = { path = "../riichi-decomp-table" }


[dev-dependencies]
assert-json-diff = "2.0"
bencher = "0.1.5"
env_logger = "0.9"
glob = "0.3"
pretty_assertions = "1.2"
pretty_assertions_sorted = "1.2"
serde_test = "1.0"
test-log = "0.2"
type-layout = "0.2.0"


[build-dependencies]
phf_codegen = "0.11"  # should agree with phf

riichi-decomp-table = { path = "../riichi-decomp-table" }


[features]
default = ["serde", "tenhou-log"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_tuple", "dep:serde_with"]
tenhou-log = ["dep:rand", "dep:regex", "serde"]

[[bin]]
name = "run_tenhou_logs"
required-features = ["glob"]
