[package]
name = "riichi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
derive_more = "0.99"
env_logger = { version = "0.9", optional = true }
glob = { version = "0.3", optional = true }
itertools = "0.10.3"
log = "0.4"
once_cell = "1.13"
rand = { version = "0.8", optional = true }
regex = { version = "1.6", optional = true }
rustc-hash = "1"
semver = "1.0"
thiserror = "1.0"

# workspace shared
nanovec.workspace = true
phf.workspace = true
serde = { workspace = true, optional = true }
serde-big-array = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_tuple = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
strum.workspace = true

# internal
riichi-elements = { path = "../riichi-elements", features = ["std"], version = "0.1.0" }
riichi-decomp = { path = "../riichi-decomp", version = "0.1.0" }


[dev-dependencies]
assert-json-diff = "2.0"
bencher = "0.1.5"
env_logger = "0.9"
glob = "0.3"
pretty_assertions = "1.2"
pretty_assertions_sorted = "1.2"
serde_test = "1.0"
test-log = "0.2"
type-layout = "0.2.0"


[features]
default = ["serde", "tenhou-log-json"]

static-lut = ["riichi-decomp/static-lut"]
serde = [
    "dep:serde",
    "dep:serde-big-array",
    "dep:serde_json",
    "dep:serde_tuple",
    "dep:serde_with",

    "riichi-elements/serde",
    "riichi-decomp/serde",
]
tenhou-log-json = ["serde", "dep:rand", "dep:regex"]

[[bin]]
name = "run_tenhou_logs"
required-features = ["glob", "env_logger"]
