[package]
name = "tenhou-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
camino = "1"
chrono = "0.4"
chrono-tz = "0.6"
flate2 = "1"
hex = "0.4.3"
indicatif = "0.17"
itertools = "0.10"
log = "0.4"
once_cell = "1"
regex = "1"
replace_with = "0.1.7"
reqwest = { version = "0.11", features = ["blocking", "gzip"] }
rusqlite = { version = "0.28", features = ["bundled", "chrono"] }
sha2 = "0.10"
url = "2.3"
zip = "0.6"

# CLI only
clap = { version = "3.2", features = ["derive"], optional = true }
env_logger = { version = "0.9", optional = true }

# internal
riichi = { path = "../riichi", features = ["tenhou-log", "serde"] }

[features]
default = ["cli"]

cli = ["clap", "env_logger"]


[[bin]]
name = "main"
required-features = ["cli"]
