[package]
name = "tenhou-shuffle"
version = "0.1.2"
edition = "2021"
authors = ["summivox <summivox@gmail.com>"]

description = "Tenhou Deck/Wall-Shuffling Algorithm"
repository = "https://github.com/summivox/riichi-rs"
keywords = ["riichi", "mahjong", "game", "shuffle", "mt19937"]
categories = ["no-std", "algorithms", "game-development"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.13.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
